system-components/kanidm/service-headless.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: kanidm-headless
  labels:
    app.kubernetes.io/name: kanidm
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: kanidm
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: replication
      port: 8444
      targetPort: 8444
