system-components/kanidm/service.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: kanidm
  labels:
    app.kubernetes.io/name: kanidm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kanidm
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      appProtocol: https
    - name: ldaps
      port: 3636
      targetPort: 3636
