system-components/kanidm/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm
  annotations:
    external-dns.kubernetes.io/managed: "true"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - idm.anurag.sh
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: envoy-gateway-system
      sectionName: wildcard-anurag-sh-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      sessionPersistence:
        sessionName: kanidm-affinity
        type: Cookie
        cookieConfig:
          lifetimeType: Session
        absoluteTimeout: 1h
      backendRefs:
        - group: ""
          kind: Service
          name: kanidm
          port: 8443
          weight: 1
