system-components/kanidm/tlsroute.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/gateway.networking.k8s.io/tlsroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: kanidm
spec:
  hostnames:
    - idm.anurag.sh
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: envoy-gateway-system
      sectionName: idm-anurag-sh-tls
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kanidm
          port: 8443
          weight: 1
